# django-site-settings

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
django_site_settings/: admin.py  apps.py  models.py  signals.py  utils.py
django_site_settings/migrations/: 0001_initial.py
django_site_settings/templatetags/: site_settings_tags.py
github/workflows/: publish.yml
